# transmitr

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md
src/: CMakeLists.txt  main.c
src/compression_algorithms/LZW/: LZW_core.c  LZW_core.h
src/compression_algorithms/huffman/: code_table.c  code_table.h  code_table_node.c  code_table_node.h  frequency_table.c  frequency_table.h  huffman_core.c  huffman_core.h  huffman_tree.c  huffman_tree.h
src/core/: client.c  client.h  header.c  header.h  server.c  server.h
src/structures/list/: array_list.c  array_list.h
src/structures/tree/: min_heap.c  min_heap.h  min_heap_node.c  min_heap_node.h  red_black_tree.c  red_black_tree.h  red_black_tree_node.c  red_black_tree_node.h
src/ui/: console.c  console.h
src/utils/: macros.h  prints.c  strings.c  strings.h
tests/: CMakeLists.txt
tests/structures/list/: array_list.test.c
